--- a/Web/Visualization/index.html
+++ b/Web/Visualization/index.html
@@ -69,7 +69,7 @@
                                                     Gender</label>
 
                                                 <select id="gender-f2a8" name="gender"
-                                                    class="u-input u-input-rectangle u-palette-3-light-2" required=">
+                                                    class="u-input u-input-rectangle u-palette-3-light-2" required="">
                                                 <option value =" 0">Gender</option>
                                                     <option value=" 1">Male</option>
                                                     <option value="2">Female</option>
@@ -80,7 +80,7 @@
                                                     class="u-label u-text-palette-3-light-2 u-label-2">Smoker</label>
 
                                                 <select id="someker-f2a8" name="smoker"
-                                                    class="u-input u-input-rectangle u-palette-3-light-2" required=">
+                                                    class="u-input u-input-rectangle u-palette-3-light-2" required="">
                                                
                                                 <option value =" 0">Smoker</option>
                                                     <option value=" 1">Yes</option>
@@ -93,14 +93,12 @@
                                                     Region</label>
 
                                                 <select id="region-f2a8" name="region"
-                                                    class="u-input u-input-rectangle u-palette-3-light-2" required=">
-                                                
-                                                <option value =" 0">Regions</option>
+                                                    class="u-input u-input-rectangle u-palette-3-light-2" required="">
                                                     <option value="1">--Please Select Region--</option>
-                                                    <option value="1">South West</option>
-                                                    <option value="2">South East</option>
-                                                    <option value="3">North West</option>
-                                                    <option value="4">North East</option>
+                                                    <option value="1">SouthWest</option>
+                                                    <option value="2">SouthEast</option>
+                                                    <option value="3">NorthWest</option>
+                                                    <option value="4">NorthEast</option>
                                                 </select>
                                             </div>
                                             <div class="u-align-left u-form-group u-form-submit u-form-group-5">
